# synclaude

./: .conclaude.yaml  Cargo.toml  README.md  flake.nix
.claude/: settings.json
src/: config.rs  main.rs  sync.rs  watcher.rs
tests/nixos/: default.nix
